# -Train-reporting-system

./: CMakeLists.txt  DepositoTreni.cpp  DepositoTreni.h  Libri Uni.txt  LineaFerroviaria.cpp  LineaFerroviaria.h  LineaFerroviariaSalviati.cpp  LineaFerroviariaTomaiuoli.cpp  LineaFerroviariaTrevisiol.cpp  Locale.cpp  Locale.h  Principale.cpp  Principale.h  README.md  Regionale.cpp  Regionale.h  Stazione.cpp  Stazione.h  SuperVeloce.cpp  SuperVeloce.h  Train.cpp  Train.h  Veloce.cpp  Veloce.h  leggere.txt  main.cpp
DepositoTreni/: DepositoTreni.cpp  DepositoTreni.h  DepositoTreni.sln  DepositoTreni.vcxproj  DepositoTreni.vcxproj.filters  Regionale.h  SuperVeloce.h  Train.cpp  Train.h  Veloce.h  main.cpp
DepositoTreni/Debug/: DepositoTreni.exe.recipe  DepositoTreni.vcxproj.FileListAbsolute.txt  vc142.idb
DepositoTreni/Debug/DepositoTreni.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DepositoTreni.lastbuildstate  link.command.1.tlog
