project ("Linea_ferroviaria")

set(CMAKE_CXX_STANDARD 11)

add_executable (Linea_ferroviaria
"DepositoTreni.cpp"
"LineaFerroviariaSalviati.cpp"
"LineaFerroviariaTomaiuoli.cpp"
"LineaFerroviariaTrevisiol.cpp"
"Locale.cpp"
"main.cpp"
"Principale.cpp"
"Regionale.cpp"
"Stazione.cpp"
"SuperVeloce.cpp"
"Train.cpp"
"Veloce.cpp"
)
